bugfixes and logging update