@@ -9,6 +9,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.lang.ProcessBuilder.Redirect;
 import java.net.HttpURLConnection;
 import java.net.Inet4Address;
 import java.net.URL;
@@ -165,14 +166,11 @@ public final class General {
         return toFolder(getPathOf(l));
     }
 
-    public static void run(String cmd, String dir, String... env) throws IOException {
-        BufferedReader b = new BufferedReader(new InputStreamReader(Runtime.getRuntime().exec(cmd, env.length == 0 ? null : env, new File(dir)).getInputStream()));
-        while(b.ready()) b.readLine();
-        b.close();
-    }
-
     public static Process run(Command c) throws IOException {
-        return Runtime.getRuntime().exec(c.cmd, c.env.length == 0 ? null : c.env, new File(c.dir));
+        return new ProcessBuilder(c.cmd)
+        .directory(new File(c.dir))
+        .redirectOutput(Redirect.appendTo(new File(c.dir + "/log.txt")))
+        .start();
     }
 
     public static boolean isBadReq(Logger l, HttpServletRequest request, HttpServletResponse response, String data) throws IOException {
